Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1887,7 +1887,7 @@
     }
    ],
    "source": [
-    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4]}\n",
+    "trace = {'y': [2, 4, 6, 4], 'x': [1, 2, 3, 4]}\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
